# SimpleFlowHRAgentSystem

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyrightconfig.json  todo.md
backend/: .env.example  Dockerfile  README.md  app.py  config.py  pyproject.toml  test_runtime_template.py
backend/runtime_helpers/: __init__.py  control_plane.py  workflow.py
backend/services/: __init__.py  control_plane_service.py  onboarding_service.py  runtime_service.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  authToken.js
workflows/: email-chat-orchestrator-with-subgraph-tool.yaml  hr-warning-email-subgraph.yaml
